--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,15 @@
 arviz==0.21.0
 click==8.2.1
 ipython==9.4.0
-matplotlib==3.10.3
 mlflow==3.1.0
 mlflow-skinny==3.1.0
 optuna==4.4.0
 optuna-dashboard==0.18.0
 pandas==2.3.0
 pytest==8.4.1
-scikit-learn==1.7.0
 seaborn==0.13.2
 tqdm==4.67.1
 matplotlib==3.10.3
-pandas==2.3.0
-pytest==8.4.1
 scikit-learn==1.7.0
 tabulate==0.9.0
-tqdm==4.67.1
+pymoo==0.6.1.5
