--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = suprb
-version = 1.0.15
+version = 0.1.01
 author = Michael Heider, Jonathan Wurth, Roman-Alexander Sraj
 author_email = michael.heider@uni-a.de
 description = SupRB: The Supervised Rule-based Learning System
@@ -13,11 +13,9 @@ classifiers =
 
 [options]
 packages = find:
-python_requires = ==3.12.11
+python_requires = >=3.9
 include_package_data = True
 install_requires =
-    matplotlib==3.10.3
-    pandas==2.3.0
-    pytest==8.4.1
-    scikit-learn==1.7.0
-    tqdm==4.67.1
+    numpy >= 1.20.0
+    scipy >= 1.7.0
+    scikit-learn >= 1.0.0
